flux/apps/base/pvr/radarr/network-policies.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  egress:
    - toEntities:
        - all
  ingress:
    - fromEntities:
        - all
