flux/apps/base/pvr/radarr/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEntities:
        - ingress
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pod-gateway
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
